[project]
name = "open_pref_eval"
version = "0.1.0"
description = "Dead Simple Open LLM Preference Evaluation"
# authors = ["wassname <github@wassname.org>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "transformers[torch]>=4.43.2",
  "datasets>=3.3.0",
  "trl>=0.9.4",
  "pandas>=2.2.0",
  "torch>=2.3.0",
  "jaxtyping>=0.2.19",
  "einops>=0.8.1",
  "activation-store",
  "baukit",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.3",
  "tqdm>=4.66.4",
  "loguru>=0.7.2",
  "tabulate>=0.9.0",
  "matplotlib>=3.9.1",
  "pytest>=8.3.2",
  "parameterized>=0.9.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # search the root directory
include = ["open_pref_eval*"]

[tool.uv.sources]
activation-store = { git = "https://github.com/wassname/activation_store.git" }
baukit = { git = "https://github.com/davidbau/baukit.git" }
