[project]
name = "open_pref_eval"
version = "0.1.0"
description = "Dead Simple Open LLM Preference Evaluation"
# authors = ["wassname <github@wassname.org>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "transformers[torch]>=4.43.2",
  "datasets>=3.3",
  "trl>=0.17",
  "pandas>=2.2",
  "torch>=2.3",
  "jaxtyping>=0.2",
  "einops>=0.8",
  # "activation-store",
  "baukit",
  "loguru>=0.7",
  "tqdm>=4.66",
  "bitsandbytes>=0.45.5",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "tabulate>=0.9",
  "matplotlib>=3.9",
  "pytest>=8.3",
  "parameterized>=0.9",
  "anycache>=2.4.0",
  "statsmodels>=0.14.4",
  "hf-xet>=1.1.2",
]
peft = [
  "peft>=0.15.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # search the root directory
include = ["open_pref_eval*"]

[tool.uv.sources]
# activation-store = { git = "https://github.com/wassname/activation_store.git" }
baukit = { git = "https://github.com/davidbau/baukit.git" }
